fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .game{
 
-  height: 90vh;
-  width: 90vw;
+  height: 100vh;
+  width: 100vw;
   border:0;
   border-radius: 4px;
   overflow:hidden;
@@ -14,7 +14,6 @@ body{
 .container{
   display: flex;
   justify-content: center;
-  padding-top: 60px;
 }
 h1{
 
